package com.fcrllc.aem.spademo.impl.domain;

/**
 * Sort direction possibilities.
 * 
 * @author David Parker (dfparker@gmail.com)
 * @author andon.sikavica
 */
public enum SortDirection {
  /**
   * Sort ascending.
   */
  ASC,

  /**
   * Sort descending.
   */
  DESC;
}
